--- a/seyon-invoice/src/main/resources/templates/P-mInvoice.html
+++ b/seyon-invoice/src/main/resources/templates/P-mInvoice.html
@@ -132,10 +132,13 @@ h1, h2, h3, h4, h5, h6, p {
 			<!-- <th align="center" class="border" colspan="1">
 			 Sl No :
 			</th> -->
-			<th align="center" class="border" colspan="6">
+			<th align="center" class="border" colspan="7" th:if="${invoice.sacCode == null or invoice.sacCode == '' }">
 			  Particulars of Service
 			</th>
-			<th align="center" class="border" colspan="1">
+			<th align="center" class="border" colspan="6" th:if="${invoice.sacCode != null and invoice.sacCode != ''}">
+			  Particulars of Service
+			</th>
+			<th align="center" class="border" colspan="1" th:if="${invoice.sacCode != null and invoice.sacCode != ''}">
 			  SAC Code
 			</th>
 			<th align="center" class="border" colspan="1">
@@ -150,10 +153,14 @@ h1, h2, h3, h4, h5, h6, p {
 		</tr>
 		
 		<tr>
-			<td align="center" class="border" colspan="6" th:text="${invoice.itemDescription}">
+				
+			<td align="center" class="border" colspan="7" th:if="${invoice.sacCode == null or invoice.sacCode == '' }"  th:text="${invoice.itemDescription}">
 			  Particulars of Service
 			</td>
-			<td align="center" class="border" colspan="1" th:text="${invoice.sacCode}">
+			<td align="center" class="border" colspan="6" th:if="${invoice.sacCode != null and invoice.sacCode != ''}"  th:text="${invoice.itemDescription}">
+			  Particulars of Service
+			</td>
+			<td align="center" class="border" colspan="1" th:if="${invoice.sacCode != null and invoice.sacCode != ''}" th:text="${invoice.sacCode}">
 			  SAC Code
 			</td>
 			<td align="center" class="border" colspan="1" th:text="${invoice.quantity}">
@@ -185,37 +192,37 @@ h1, h2, h3, h4, h5, h6, p {
 			  <p><u>Payment Terms</u></p>
 			  <p><small>Immediate</small></p>
 			</td>
-			<td align="center" class="border" colspan="2">
+			<td align="center" class="border" colspan="2" th:if="${invoice.cgstPerfoma != null and invoice.cgstPerfoma gt 0}">
 			  Add: CGST 
 			</td>
-			<td align="center" class="border" colspan="2" th:text="${invoice.cgstPerfomaPercent}">
+			<td align="center" class="border" colspan="2" th:text="${invoice.cgstPerfomaPercent}" th:if="${invoice.cgstPerfoma != null and invoice.cgstPerfoma gt 0}">
 			  45000 
 			</td>
-			<td align="center" class="border" colspan="2" th:text="${invoice.cgstPerfoma}">
+			<td align="center" class="border" colspan="2" th:text="${invoice.cgstPerfoma}" th:if="${invoice.cgstPerfoma != null and invoice.cgstPerfoma gt 0}">
 			  45000
 			</td>
 		</tr>
 		<tr>
 			
-			<td align="center" class="border" colspan="2">
+			<td align="center" class="border" colspan="2" th:if="${invoice.sgstPerfoma != null and invoice.sgstPerfoma gt 0}">
 			   Add: SGST 
 			</td>
-			<td align="center" class="border" colspan="2" th:text="${invoice.sgstPerfomaPercent}">
+			<td align="center" class="border" colspan="2" th:text="${invoice.sgstPerfomaPercent}" th:if="${invoice.sgstPerfoma != null and invoice.sgstPerfoma gt 0}">
 			  45000
 			</td>
-			<td align="center" class="border" colspan="2" th:text="${invoice.sgstPerfoma}">
+			<td align="center" class="border" colspan="2" th:text="${invoice.sgstPerfoma}" th:if="${invoice.sgstPerfoma != null and invoice.sgstPerfoma gt 0}">
 			  45000
 			</td>
 		</tr>
 		<tr>
 			
-			<td align="center" class="border" colspan="2">
+			<td align="center" class="border" colspan="2" th:if="${invoice.igstPerfoma != null and invoice.igstPerfoma gt 0}">
 			   Add: IGST 
 			</td>
-			<td align="center" class="border" colspan="2" th:text="${invoice.igstPerfomaPercent}">
+			<td align="center" class="border" colspan="2" th:text="${invoice.igstPerfomaPercent}" th:if="${invoice.igstPerfoma != null and invoice.igstPerfoma gt 0}">
 			  45000
 			</td>
-			<td align="center" class="border" colspan="2" th:text="${invoice.igstPerfoma}">
+			<td align="center" class="border" colspan="2" th:text="${invoice.igstPerfoma}" th:if="${invoice.igstPerfoma != null and invoice.igstPerfoma gt 0}">
 			  45000
 			</td>
 		</tr>
@@ -224,7 +231,7 @@ h1, h2, h3, h4, h5, h6, p {
 			<td align="center" class="border" colspan="2">
 			  Total Amount
 			</td>
-			<td align="center" class="border" colspan="2">
+			<td align="center" class="border" colspan="2" th:text="${additionPDetails}">
 			  A + B
 			</td>
 			<td align="center" class="border" colspan="2" th:text="${invoice.calculatedPerformaAmount}">
